# tf-idf_app

./: .env  README.md  docker-compose.yml  nginx.conf
backend/fastapi_app/: .env  Dockerfile  pyproject.toml
backend/fastapi_app/src/api/v1/: files.py
backend/fastapi_app/src/core/: application.py  config.py  lifetime.py  tkq.py  urls.py
backend/fastapi_app/src/db/: redis_db.py
backend/fastapi_app/src/service/: file_handler.py
backend/fastapi_app/src/tasks/: tasks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/components/: App.js
frontend/src/components/FileLoader/: FileLoader.jsx  handlers.jsx
frontend/src/components/HistoryMenu/: HistoryMenu.jsx
frontend/src/components/ResultsTable/: ResultsTable.jsx
frontend/src/components/hooks/: useFileExists.jsx  useSendFile.jsx  useSetTableData.jsx
frontend/src/errors/: errors.jsx
frontend/src/services/: fileServices.jsx
frontend/src/stores/: RootStoreContext.jsx  rootStore.jsx
frontend/src/stores/stores/: TableStore.jsx
